--- a/Ecommerce/appsettings.json
+++ b/Ecommerce/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CadenaSQL" : "Data Source=DESKTOP-OAO2BUA;Initial Catalog=Ecommerce;Integrated Security=True"
+  }
 }
