--- a/Ecommerce/appsettings.json
+++ b/Ecommerce/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL" : "Data Source=DESKTOP-OAO2BUA;Initial Catalog=Ecommerce;Integrated Security=True"
+    "CadenaSQL": "Data Source=DESKTOP-OAO2BUA;Initial Catalog=Ecommerce;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
